--- a/assets/css/template.css
+++ b/assets/css/template.css
@@ -1636,7 +1636,7 @@ button {
     float: left;
     border-radius: 3px;
     position: relative;
-    border: 1px solid #eee;
+    /*border: 1px solid #eee;*/
     box-shadow: 0 0 60px 0 rgba(0, 0, 0, .07);
     transition: .2s linear;
 }
@@ -1693,7 +1693,7 @@ button {
 }
 
 .timeline > li:nth-child(even) > .timeline-panel {
-    border: 1px solid #eee;
+    /*border: 1px solid #eee;*/
     float: right;
 }
 
