--- a/assets/css/template.css
+++ b/assets/css/template.css
@@ -1899,7 +1899,7 @@ button {
     height: 100%;
     width: 100%;
     left: 0;
-    text-align: right;
+    text-align: center;
 }
 
 .inner-nav {
