--- a/assets/bootstrap/css/bootstrap-grid.css
+++ b/assets/bootstrap/css/bootstrap-grid.css
@@ -18,7 +18,7 @@ html {
   margin-left: auto;
   padding-right: 15px;
   padding-left: 15px;
-  width: 100%;
+  /*width: 100%;*/
 }
 
 @media (min-width: 576px) {
