--- a/assets/bootstrap/css/bootstrap.css
+++ b/assets/bootstrap/css/bootstrap.css
@@ -601,7 +601,7 @@ pre code {
   margin-left: auto;
   padding-right: 15px;
   padding-left: 15px;
-  width: 100%;
+  /*width: 100%;*/
 }
 
 @media (min-width: 576px) {
