added link to github account

--- a/assets/css/template.css
+++ b/assets/css/template.css
@@ -2877,6 +2877,10 @@ button {
 [Portfolio Single Item]
 */
 
+.portfolio-space {
+    margin-top: 67px;
+}
+
 .portfolio-item {
     float: left;
     width: 100%;
